--- a/pom.xml
+++ b/pom.xml
@@ -1,89 +1,121 @@
+<?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0"
-            xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-            xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-       <modelVersion>4.0.0</modelVersion>
-       <groupId>com.appium</groupId>
-       <artifactId>mobile-automation</artifactId>
-       <version>1.0-SNAPSHOT</version>
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <modelVersion>4.0.0</modelVersion>
+    
+    <groupId>com.mobile.automation</groupId>
+    <artifactId>mobile-automation-framework</artifactId>
+    <version>1.0.0</version>
+    <packaging>jar</packaging>
 
-       <properties>
-           <maven.compiler.source>17</maven.compiler.source>
-           <maven.compiler.target>17</maven.compiler.target>
-           <appium.java.client.version>9.2.3</appium.java.client.version>
-           <selenium.version>4.24.0</selenium.version>
-           <maven.compiler.release>17</maven.compiler.release>
-       </properties>
+    <properties>
+        <maven.compiler.source>17</maven.compiler.source>
+        <maven.compiler.target>17</maven.compiler.target>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        
+        <!-- Dependencies Versions -->
+        <appium.version>8.6.0</appium.version>
+        <selenium.version>4.15.0</selenium.version>
+        <testng.version>7.8.0</testng.version>
+        <slf4j.version>2.0.9</slf4j.version>
+        <allure.version>2.24.0</allure.version>
+    </properties>
 
-       <dependencies>
-           <!-- Appium Java Client -->
-           <dependency>
-               <groupId>io.appium</groupId>
-               <artifactId>java-client</artifactId>
-               <version>${appium.java.client.version}</version>
-           </dependency>
-           <!-- Selenium WebDriver -->
-           <dependency>
-               <groupId>org.seleniumhq.selenium</groupId>
-               <artifactId>selenium-java</artifactId>
-               <version>${selenium.version}</version>
-           </dependency>
-           <!-- Selenium API (explicit) -->
-           <dependency>
-               <groupId>org.seleniumhq.selenium</groupId>
-               <artifactId>selenium-api</artifactId>
-               <version>${selenium.version}</version>
-           </dependency>
-           <!-- Selenium Remote Driver (explicit) -->
-           <dependency>
-               <groupId>org.seleniumhq.selenium</groupId>
-               <artifactId>selenium-remote-driver</artifactId>
-               <version>${selenium.version}</version>
-           </dependency>
-           <!-- TestNG -->
-           <dependency>
-               <groupId>org.testng</groupId>
-               <artifactId>testng</artifactId>
-               <version>7.10.2</version>
-               <scope>test</scope>
-           </dependency>
-           <!-- SLF4J for Logging -->
-           <dependency>
-               <groupId>org.slf4j</groupId>
-               <artifactId>slf4j-api</artifactId>
-               <version>2.0.16</version>
-           </dependency>
-           <dependency>
-               <groupId>org.slf4j</groupId>
-               <artifactId>slf4j-simple</artifactId>
-               <version>2.0.16</version>
-           </dependency>
-       </dependencies>
+    <dependencies>
+        <!-- Appium Java Client -->
+        <dependency>
+            <groupId>io.appium</groupId>
+            <artifactId>java-client</artifactId>
+            <version>${appium.version}</version>
+        </dependency>
 
-       <build>
-           <plugins>
-               <plugin>
-                   <groupId>org.apache.maven.plugins</groupId>
-                   <artifactId>maven-compiler-plugin</artifactId>
-                   <version>3.13.0</version>
-                   <configuration>
-                       <source>17</source>
-                       <target>17</target>
-                       <release>17</release>
-                   </configuration>
-               </plugin>
-               <plugin>
-                   <groupId>org.apache.maven.plugins</groupId>
-                   <artifactId>maven-surefire-plugin</artifactId>
-                   <version>3.3.1</version>
-                   <configuration>
-                       <suiteXmlFiles>
-                           <suiteXmlFile>testng.xml</suiteXmlFile>
-                       </suiteXmlFiles>
-                       <includes>
-                    <include>**/*Test.java</include> <!-- Include all test classes -->
-                </includes>
-                   </configuration>
-               </plugin>
-           </plugins>
-       </build>
-   </project>
+        <!-- Selenium -->
+        <dependency>
+            <groupId>org.seleniumhq.selenium</groupId>
+            <artifactId>selenium-java</artifactId>
+            <version>${selenium.version}</version>
+        </dependency>
+
+        <!-- TestNG -->
+        <dependency>
+            <groupId>org.testng</groupId>
+            <artifactId>testng</artifactId>
+            <version>${testng.version}</version>
+        </dependency>
+
+        <!-- Logging -->
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>${slf4j.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-simple</artifactId>
+            <version>${slf4j.version}</version>
+        </dependency>
+
+        <!-- Allure TestNG -->
+        <dependency>
+            <groupId>io.qameta.allure</groupId>
+            <artifactId>allure-testng</artifactId>
+            <version>${allure.version}</version>
+        </dependency>
+    </dependencies>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.13.0</version>
+                <configuration>
+                    <source>17</source>
+                    <target>17</target>
+                    <encoding>UTF-8</encoding>
+                </configuration>
+            </plugin>
+            
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>3.2.5</version>
+                <configuration>
+                    <suiteXmlFiles>
+                        <suiteXmlFile>testng.xml</suiteXmlFile>
+                    </suiteXmlFiles>
+                    <argLine>
+                        -javaagent:"${settings.localRepository}/org/aspectj/aspectjweaver/1.9.20/aspectjweaver-1.9.20.jar"
+                        -Dfile.encoding=UTF-8
+                    </argLine>
+                    <properties>
+                        <property>
+                            <name>listener</name>
+                            <value>io.qameta.allure.testng.AllureTestNg</value>
+                        </property>
+                    </properties>
+                </configuration>
+                <dependencies>
+                    <dependency>
+                        <groupId>org.aspectj</groupId>
+                        <artifactId>aspectjweaver</artifactId>
+                        <version>1.9.20</version>
+                    </dependency>
+                </dependencies>
+            </plugin>
+            
+            <!-- Allure Maven Plugin -->
+            <plugin>
+                <groupId>io.qameta.allure</groupId>
+                <artifactId>allure-maven</artifactId>
+                <version>2.12.0</version>
+                <configuration>
+                    <reportVersion>${allure.version}</reportVersion>
+                    <resultsDirectory>${project.build.directory}/allure-results</resultsDirectory>
+                    <reportDirectory>${project.build.directory}/allure-report</reportDirectory>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
+</project>
